examples/c/error-codes/violates-constraint/fatal/CV-TCANON1-bad-static.output
CV-TCANON1-bad-static.c:4:6: error: requested alignment is less than minimum alignment of 8 for type 'long long'
     _Alignas
     ^
CV-TCANON1-bad-static.c:3:1: warning: declaration does not declare anything [-Wmissing-declarations]
struct {
^
1 warning and 1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
